tests/core/snapshots/test-nested-link.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema
  @server
  @upstream
  @link(src: "graphql-with-link.graphql", type: Config)
  @link(src: "link-enum.graphql", type: Config)
  @link(src: "link-enum.graphql", type: Config) {
  query: Query
}

enum Foo {
  BAR
  BAZ
}

type Post {
  id: Int!
  user: User
    @graphQL(args: [{key: "id", value: "{{.value.userId}}"}], url: "http://jsonplaceholder.typicode.com", name: "user")
  userId: Int!
}

type Query {
  foo: Foo @http(url: "http://jsonplaceholder.typicode.com/foo")
  post(id: Int!): Post @http(url: "http://jsonplaceholder.typicode.com/posts/{{.args.id}}")
}

type User {
  id: Int
  name: String
}
