tests/core/snapshots/test-optional-key-skip-empty.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server(port: 8000) @upstream(baseURL: "http://example.com") {
  query: Query
}

type Bar {
  id: Int
}

type Foo {
  bar: Bar
    @http(
      path: "/bar"
      query: [{key: "tagEmpty", value: "{{.value.tag}}", skipEmpty: true}, {key: "tag", value: "{{.value.tag}}"}]
    )
  id: Int!
  tag: String
}

type Query {
  foos: [Foo] @http(path: "/foos")
}
