tests/core/snapshots/test-query-documentation.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
---
schema @server @upstream {
  query: Query
}

type Query {
  """
  This is test
  """
  foo: String @http(url: "http://jsonplaceholder.typicode.com/foo")
}
