tests/core/snapshots/test-scalars-validation.md_merged.snap
---
source: tests/core/spec.rs
expression: formatter
snapshot_kind: text
---
schema @server(hostname: "localhost", port: 8000) @upstream {
  query: Query
}

type Query {
  emailInput(x: Email!): Boolean @expr(body: "{{.args.x}}")
  emailOutput: Email! @expr(body: 125)
}
