tests/core/snapshots/test-union.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Bar {
  bar: String!
}

scalar Bytes

scalar Date

scalar DateTime

scalar Email

scalar Empty

type Foo {
  foo: String!
}

union FooBar = Bar | Foo

scalar Int128

scalar Int16

scalar Int32

scalar Int64

scalar Int8

scalar JSON

type Nested {
  bar: FooBar
  foo: FooBar
}

scalar PhoneNumber

type Query {
  arr: [FooBar]
  bar: FooBar
  foo: FooBar
  nested: Nested
  unknown: FooBar
}

scalar UInt128

scalar UInt16

scalar UInt32

scalar UInt64

scalar UInt8

scalar Url

schema {
  query: Query
}
